# Rag_Application

./: .gitignore  ARCHITECTURE.md  Dockerfile  FINAL_REPORT.md  INDEX.md  README.md  SUMMARY.md  pyproject.toml  requirements.txt
.github/workflows/: python-tests.yml
PROJECT/rag_application/: .env.example  .gitignore  DELIVERABLES.md  QUICKSTART.md  README.md  docker-compose.yml  start.bat  start.sh
PROJECT/rag_application/src/: __init__.py  rag_chain.py
PROJECT/rag_application/tests/: test_api.py  test_rag_core.py
src/: app.py  config.py  rag_chain.py  rag_core.py  streamlit_ui.py
tests/: __init__.py  test_api.py  test_rag_core.py
